--- a/style.css
+++ b/style.css
@@ -1,43 +1,52 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: bisque;
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #E6E8E6;
+    box-sizing: border-box;
 }
 
-a {
-    font-size: 24px;
+
+.card{
+    width: 500px;
+    margin: 0 auto;
 }
 
-.head {
-    color: rgb(0, 28, 80);
+.head {  
     text-align: center;
-    background-color: rgb(195, 132, 254);
-    font-size: 50px;
+    display:block;
+    width: auto;  
+}
+
+.title{
+    color: #ffd7ff;
+    background: #DF2935;
+    border: 5px dotted rgb(255, 156, 156);
+    font-size: 42px;
+    padding: 20px;
 }
 
 .heading {
     text-align: center;
 }
 
-.heading.h1 {
-    color: green;
-    background-color: rgb(190, 147, 231);
+.link-list li a{
+    font-size: 20px;
+    color: #1e1e1e;
+    text-decoration: none;
 }
 
-.foodimg {
+.link-list {
+    list-style: none;
+    padding: 5px;
+    background: #3772FF;
+    border: 5px solid white;
     text-align: center;
-}
+  }
+  
+  .link-list li {
+    display: inline-block;
+    /* margin-right: 10px; add spacing between items */
+    padding: 10px;
+    background: #FDCA40;
+    margin: 0 20px 0;
+  }
 
-#Borscht {
-    color: red;
-    background-color: rgb(223, 255, 127);
-}
-
-#Olivye {
-    color: rgb(255, 251, 169);
-    background-color: rgb(0, 67, 0);
-}
-
-#Varenyky {
-    color: brown;
-    background-color: aliceblue;
-}
